# nh3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.py  dataset.py  geospatial.py  kd_tree_mapper.py  main.py  pyproject.toml  util.py  utilv2.py  veh_test_doc.json
data/: README.md
data/geo/: drive_cycle_route.json
docs/: equipment.md  vehicle-dynamics.md
nh3/: __init__.py  basedir.py  compute_vsp.py  config.py  data_processor.py  geospatial.py  kd_tree.py  main.py  optimized_computation.py  optimized_processor.py  preprocessing.py  util.py  visual_processor.py  vsp_compute.py  vsp_compute_v2.py
nh3/extensions/: __init__.py  _grade_calc_ext.exp  _grade_calc_ext.lib  _grade_calc_ext.pyd  cpp_bindings.py
nh3/extensions/cpp/: bindings.cpp  elevation_kdtree.hpp  grade_calc.cpp  grade_calc.h  grade_vsp.hpp
nh3/src/: bindings.cpp  kd_tree.h
scripts/: analysis_pipeline.py  run_analysis.py  verify_grade.py  verify_vsp.py
