[project]
name = "nh3"
version = "0.1.0"
description = 'nh3 is a lightweight framework for characterizing ammonia (NH3) emissions under real-time driving conditions.'
readme = "README.md"
requires-python = '>=3.13'
dependencies = [
    "jupyterlab>=4.3.4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "polars>=1.18.0",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]
