[build-system]
requires = ["scikit-build-core[pyproject]", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "nh3"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "polars",
    "matplotlib",
    "scipy",
    "numba",
    "scikit-learn",
    "loguru"
]

[tool.scikit-build]
wheel.packages = ["nh3"]
sdist.include = [
    "nh3/extensions/cpp/",
    "extern/pybind11/"
]

[tool.scikit-build.cmake]
verbose = true

[tool.scikit-build.ninja]
minimum-version = "1.10"
