[build-system]
requires = ["scikit-build-core[pyproject]", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "nh3"
version = "0.5.0"
description = "High-performance NH3 emissions analysis toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy", "polars"]

[tool.scikit-build]
wheel.packages = ["nh3"]
cmake.version = "3.27"
